[gd_scene load_steps=89 format=3 uid="uid://cgcppww0iyw3a"]

[ext_resource type="Script" path="res://entities/player/player_character.gd" id="1_ks168"]
[ext_resource type="Texture2D" uid="uid://bbra1im6h500w" path="res://assets/sprites/characters/Swashbuckler_melee.png" id="2_2ro1s"]
[ext_resource type="Texture2D" uid="uid://bkgnc5f5f0tw1" path="res://assets/sprites/characters/Swashbuckler_idle.png" id="2_afuf3"]
[ext_resource type="Texture2D" uid="uid://dexuu0sd2e0u8" path="res://assets/sprites/characters/Swashbuckler_mining.png" id="3_0yy6c"]
[ext_resource type="Texture2D" uid="uid://beh0rshb0ugqs" path="res://assets/sprites/characters/Swashbuckler_walk.png" id="4_onhi7"]
[ext_resource type="PackedScene" uid="uid://df5iryuyceu62" path="res://ui/health_control.tscn" id="5_fbrlq"]
[ext_resource type="PackedScene" uid="uid://cvum82qpwx1su" path="res://entities/components/hurtbox_component.tscn" id="6_cdk44"]
[ext_resource type="PackedScene" uid="uid://b4p7w41c7bdro" path="res://entities/components/hitbox_component.tscn" id="7_j6qro"]
[ext_resource type="Script" path="res://entities/components/hurtbox_component.gd" id="8_3jja0"]
[ext_resource type="Script" path="res://entities/components/weapon.gd" id="9_pn4gy"]
[ext_resource type="PackedScene" uid="uid://b583iycy1ndj8" path="res://entities/components/health_component.tscn" id="10_t6kef"]
[ext_resource type="Script" path="res://entities/components/health_component_player.gd" id="11_g8ax7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6sh5k"]
atlas = ExtResource("2_2ro1s")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbq1i"]
atlas = ExtResource("2_2ro1s")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy4t0"]
atlas = ExtResource("2_2ro1s")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lj40"]
atlas = ExtResource("2_2ro1s")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3wl5"]
atlas = ExtResource("2_2ro1s")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj42x"]
atlas = ExtResource("2_2ro1s")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2cng"]
atlas = ExtResource("2_2ro1s")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubb4q"]
atlas = ExtResource("2_2ro1s")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wyop"]
atlas = ExtResource("2_2ro1s")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_75t66"]
atlas = ExtResource("2_2ro1s")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1pjm"]
atlas = ExtResource("2_2ro1s")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_icpq7"]
atlas = ExtResource("2_2ro1s")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dy7m"]
atlas = ExtResource("2_2ro1s")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry6l3"]
atlas = ExtResource("2_2ro1s")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4a5j"]
atlas = ExtResource("2_2ro1s")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvk61"]
atlas = ExtResource("2_2ro1s")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5pjp"]
atlas = ExtResource("2_afuf3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75uj"]
atlas = ExtResource("2_afuf3")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iywso"]
atlas = ExtResource("2_afuf3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_veq5j"]
atlas = ExtResource("2_afuf3")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h8vn"]
atlas = ExtResource("2_afuf3")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkmxw"]
atlas = ExtResource("2_afuf3")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d11u"]
atlas = ExtResource("2_afuf3")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g14lj"]
atlas = ExtResource("2_afuf3")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r31um"]
atlas = ExtResource("2_afuf3")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tya75"]
atlas = ExtResource("2_afuf3")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd8x3"]
atlas = ExtResource("2_afuf3")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_df3ic"]
atlas = ExtResource("2_afuf3")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urso3"]
atlas = ExtResource("2_afuf3")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbt8w"]
atlas = ExtResource("2_afuf3")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc4lv"]
atlas = ExtResource("2_afuf3")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eqyv"]
atlas = ExtResource("2_afuf3")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n61v"]
atlas = ExtResource("3_0yy6c")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihemw"]
atlas = ExtResource("3_0yy6c")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h60jj"]
atlas = ExtResource("3_0yy6c")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnemq"]
atlas = ExtResource("3_0yy6c")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0h5q"]
atlas = ExtResource("3_0yy6c")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y37n"]
atlas = ExtResource("3_0yy6c")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b016k"]
atlas = ExtResource("3_0yy6c")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtsma"]
atlas = ExtResource("3_0yy6c")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofabn"]
atlas = ExtResource("3_0yy6c")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e4r0"]
atlas = ExtResource("3_0yy6c")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_monoy"]
atlas = ExtResource("3_0yy6c")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mxiq"]
atlas = ExtResource("3_0yy6c")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rykdc"]
atlas = ExtResource("3_0yy6c")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw5iu"]
atlas = ExtResource("3_0yy6c")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rda11"]
atlas = ExtResource("3_0yy6c")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_44c38"]
atlas = ExtResource("3_0yy6c")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1eds"]
atlas = ExtResource("3_0yy6c")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p235q"]
atlas = ExtResource("3_0yy6c")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eolhm"]
atlas = ExtResource("3_0yy6c")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_56uph"]
atlas = ExtResource("3_0yy6c")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk62r"]
atlas = ExtResource("4_onhi7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_totsx"]
atlas = ExtResource("4_onhi7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pasj"]
atlas = ExtResource("4_onhi7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdpd8"]
atlas = ExtResource("4_onhi7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdgku"]
atlas = ExtResource("4_onhi7")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5bki"]
atlas = ExtResource("4_onhi7")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gcjv"]
atlas = ExtResource("4_onhi7")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfmim"]
atlas = ExtResource("4_onhi7")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_woejy"]
atlas = ExtResource("4_onhi7")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqxmg"]
atlas = ExtResource("4_onhi7")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_df1cv"]
atlas = ExtResource("4_onhi7")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_facdw"]
atlas = ExtResource("4_onhi7")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2j7j"]
atlas = ExtResource("4_onhi7")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0ge8"]
atlas = ExtResource("4_onhi7")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_448qp"]
atlas = ExtResource("4_onhi7")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppn42"]
atlas = ExtResource("4_onhi7")
region = Rect2(144, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_in2hm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sh5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbq1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy4t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lj40")
}],
"loop": false,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3wl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj42x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2cng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubb4q")
}],
"loop": false,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wyop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75t66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1pjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icpq7")
}],
"loop": false,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dy7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry6l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4a5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvk61")
}],
"loop": false,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5pjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v75uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iywso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veq5j")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h8vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkmxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d11u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g14lj")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r31um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tya75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd8x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df3ic")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urso3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbt8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc4lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eqyv")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n61v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihemw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h60jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnemq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0h5q")
}],
"loop": false,
"name": &"mine_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y37n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b016k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtsma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofabn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e4r0")
}],
"loop": false,
"name": &"mine_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_monoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mxiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rykdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw5iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rda11")
}],
"loop": false,
"name": &"mine_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44c38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1eds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p235q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eolhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56uph")
}],
"loop": false,
"name": &"mine_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk62r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_totsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pasj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdpd8")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdgku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5bki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gcjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfmim")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_woejy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqxmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df1cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_facdw")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2j7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0ge8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_448qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppn42")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oiobp"]
radius = 5.0
height = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkk4x"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8pya"]
bg_color = Color(0.980392, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_by03w"]
radius = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a0qom"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e4ong"]
radius = 9.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ayejg"]
height = 22.0

[node name="PlayerCharacter" type="CharacterBody2D" groups=["Player"]]
collision_mask = 6
script = ExtResource("1_ks168")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_in2hm")
animation = &"attack_up"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_oiobp")

[node name="HealthControl" parent="." instance=ExtResource("5_fbrlq")]
offset_left = -24.0
offset_top = 11.0
offset_right = -24.0
offset_bottom = 11.0
scale = Vector2(0.15, 0.15)

[node name="StatBar" parent="HealthControl" index="0"]
theme_override_styles/background = SubResource("StyleBoxFlat_jkk4x")
theme_override_styles/fill = SubResource("StyleBoxFlat_l8pya")

[node name="RegenTimer" type="Timer" parent="."]
autostart = true

[node name="AreaPickup" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPickup"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_by03w")

[node name="AreaHurtbox" parent="." instance=ExtResource("6_cdk44")]
collision_layer = 8
collision_mask = 0
script = ExtResource("8_3jja0")

[node name="CollisionShape2D" parent="AreaHurtbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_a0qom")

[node name="AreaLifeSkillsHitbox" parent="." instance=ExtResource("7_j6qro")]
position = Vector2(0, -13)
collision_layer = 0
collision_mask = 4
script = null

[node name="CollisionShape2D" parent="AreaLifeSkillsHitbox" index="0"]
shape = SubResource("CapsuleShape2D_e4ong")

[node name="AreaWeaponHitbox" parent="." instance=ExtResource("7_j6qro")]
position = Vector2(0, -13)
collision_layer = 0
collision_mask = 16
monitoring = false
script = ExtResource("9_pn4gy")
attack_damage = 25.0
knockback_force = 1000.0
stun_time = 1.5

[node name="CollisionShape2D" parent="AreaWeaponHitbox" index="0"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ayejg")

[node name="HealthComponent" parent="." instance=ExtResource("10_t6kef")]
script = ExtResource("11_g8ax7")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="RegenTimer" to="HealthComponent" method="_on_regen_timer_timeout"]
[connection signal="area_entered" from="AreaPickup" to="." method="_on_area_pickup_area_entered"]
[connection signal="body_entered" from="AreaLifeSkillsHitbox" to="." method="_on_area_life_skills_hitbox_body_entered"]
[connection signal="area_entered" from="AreaWeaponHitbox" to="AreaWeaponHitbox" method="_on_area_entered"]

[editable path="HealthControl"]
[editable path="AreaHurtbox"]
[editable path="AreaLifeSkillsHitbox"]
[editable path="AreaWeaponHitbox"]
